--- a/Kauã-programação/index.html
+++ b/Kauã-programação/index.html
@@ -10,11 +10,15 @@
 </head>
 <body>
     <header class="cabecalho">
-       <span class="cabecalho__menu-hamburguer"></span>
-       <img src="Img/Logo.svg" alt="Logo da Alurabooks">
-       <a href="#"><img src="Img/Favoritos.svg"></a>
-       <a href="#"><img src="Img/Compras.svg"></a>
-       <a href="#"><img src="Img/Usuario.svg"></a>
+        <div class="container">
+            <span class="cabecalho__menu-hamburguer container__imagem"></span>
+            <img class="container__imagem" src="Img/Logo.svg" alt="Logo da Alurabooks">
+        </div>
+        <div class="container">
+            <a href="#"><img class="container__imagem" src="Img/Favoritos.svg"></a>
+            <a href="#"><img class="container__imagem" src="Img/Compras.svg"></a>
+            <a href="#"><img class="container__imagem" src="Img/Usuario.svg"></a>
+        </div>
     </header>
 </body>
 </html>
