--- a/index.html
+++ b/index.html
@@ -45,13 +45,35 @@
         </div>
 
         <ul class="opções">
-            <li class="opções__item">Categorias</li>
-            <li class="opções__item"><a href="#" class="opções__link"></a></li>
-            <li class="opções__item"><a href="#" class="opções__link">Minha estante</a> </li>
+            <imput type="checkbox" id="opções-menu" class="opções__botão">
+            <label for="opções-menu">
+                <li class="opções__item">Categorias</li>
+            </label>
 
+            <ul class="lista-menu">
+                <li class="lista__menu">
+                    <a href="#" class="lista-menu__link">Programação</a>
+                </li>
+                <li class="lista__menu">
+                    <a href="#" class="lista-menu__link">Front-end</a>
+                </li>
+                <li class="lista__menu">
+                    <a href="#" class="lista-menu__link">Infraestrutura</a>
+                </li>
+                <li class="lista__menu">
+                    <a href="#" class="lista-menu__link">Business</a>
+                </li>
+                <li class="lista__menu">
+                    <a href="#" class="lista-menu__link">Design & UX</a>
+                </li>
+            </ul>
+
+            <li class="opções__item"> <a href="#" class="opções__link">Favoritos</a></li>
+            <li class="opções__item"> <a href="#" class="opções__link">Minha estante</a></li>
         </ul>
+
         <div class="container">
-            <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt="Meus Favoritos"></a>
+            <a href="#"><img class="container__imagem container__imagem-transparente" src="img/Favoritos.svg" alt="Meus Favoritos"></a>
             <a href="#"><img class="container__imagem" src="img/Compras.svg" alt=""></a>
             <a href="#"><img class="container__imagem" src="img/Usuario.svg" alt=""></a>
         </div>
