--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
         </div>
 
         <ul class="opções">
+            <input type="checkbox" id="opções-menu" class="opções__botão">
+            <label for="opções-menu">
+                <li class="opções__item">Categorias</li>
+            </label>
+            
+            <li class="opções__item">Categorias</li>
+            <li class="opções__item"><a href="#" class="opções__link">Favoritos</a></li>
+            <li class="opções__item"><a href="#" class="opções__link">Minha estante</a></li>
+        </ul>
+
+        <ul class="opções">
             <imput type="checkbox" id="opções-menu" class="opções__botão">
             <label for="opções-menu">
                 <li class="opções__item">Categorias</li>
@@ -73,9 +84,16 @@
         </ul>
 
         <div class="container">
-            <a href="#"><img class="container__imagem container__imagem-transparente" src="img/Favoritos.svg" alt="Meus Favoritos"></a>
-            <a href="#"><img class="container__imagem" src="img/Compras.svg" alt=""></a>
-            <a href="#"><img class="container__imagem" src="img/Usuario.svg" alt=""></a>
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"
+                    class="container__imagem container__imagem-transparente"> </a>
+            <a href="#" class="container__link">
+                <img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem">
+                <p class="container__texto">Minha sacola</p>
+            </a>
+            <a href="#" class="container__link">
+                <img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem">
+                <p class="container__texto">Meu perfil</p>
+            </a>
         </div>
     </header>
     <section class="banner">
